# fnv-hash-fast

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  build_ext.py  pyproject.toml
.github/workflows/: ci.yml
src/fnv_hash_fast/: __init__.py  _fnv_impl.c  _fnv_impl.pyx  fnv_wrapper.h
tests/: test_init.py
tests/benchmarks/: test_fnv_hash.py
